tests/fixtures/errors/e0906_unknown_bundle.mimz
// expect: E0906
bundle Bad { x: NoSuchBundle(W: 32) }
module Top {
  out z: bit
  z = 0
}
